<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItem_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menuItem_signIn"
        android:orderInCategory="2"
        android:title="@string/sign_in"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuItem_signUp"
        android:orderInCategory="3"
        android:title="@string/sign_up"
        app:showAsAction="always" />


    <item
        android:id="@+id/menuItem_signOut"
        android:orderInCategory="6"
        android:title="@string/sign_out"
        app:showAsAction="always" />

</menu>