<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookBrowsing.BookBrowsingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bookBrowsing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/Platform.MaterialComponents.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bookBrowsing_selectGenreTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/select_genre_title"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bookBrowsing" />


    <Spinner
        android:id="@+id/spinner_bookBrowsing_genreList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_bookBrowsing_selectGenreTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bookBrowsing_bookList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:clipToPadding="false"
        android:paddingBottom="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_bookBrowsing_genreList" />

    <TextView
        android:id="@+id/tv_bookBrowsingItem_noBookFoundMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bookBrowsingItem_noBookFoundDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/book_will_available_message"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_bookBrowsingItem_noBookFoundMessage" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_bookBrowsing_addBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_book"
        android:textColor="@color/white"
        app:icon="@drawable/ic_add"
        android:onClick="addBook"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>